--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  padding:10px;
 }
 .nav-list {
   display: flex;
@@ -30,7 +31,7 @@ body {
   padding: 10px;
   line-height: 50px;
   text-decoration:none;
-}
+  }
 a:visited 
 {
     text-decoration: none; 
@@ -54,5 +55,9 @@ a:visited
 .logo {
 width:50px;
 height:50px;
+padding:5px;
+}
+p{
+  padding-right:50px;
 
 }
